--- a/sass/buttons.scss
+++ b/sass/buttons.scss
@@ -1,9 +1,9 @@
 @import "compass/reset";
 
-$facebook: #3b5998;
-$twitter: #23abf2;
-$google: #c7392c;
-$linkdIn: #007bb6;
+$facebook:    #3b5998;
+$twitter:        #23abf2;
+$google:        #c7392c;
+$linkdIn:        #007bb6;
 
 @mixin setBgColorAndHover($theColor) {
     background-color: $theColor;
@@ -71,7 +71,7 @@ $linkdIn: #007bb6;
 	a {
 		height:100%;
 		width:24%;
-		margin:0 0.5px;
+		// margin:0 0.5px;
 	}
 }
 
@@ -82,7 +82,7 @@ $linkdIn: #007bb6;
 	a {
 		height:24%;
 		width:100%;
-		margin:0.5px 0;
+		// margin:0.5px 0;
 	}
 }
 
